CHORE: Modified .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,2 @@
-.vscode # Will not commit for now -- as settings are still being configured
+# Will not commit for now -- as settings are still being configured
+*.vscode/
