DEV: Notebooks about scraping SBU SOLAR info

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,10 @@
 # Knowledge graphs
 # pygraft
+
+# Web scraping/interfacing
+# beautifulsoup4
+selenuim
+webdriver-manager
+
+# Data manipulation
+pandas
