--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -29,4 +29,7 @@ sphinx:
 # See https://docs.readthedocs.io/en/stable/guides/reproducible-builds.html
 python:
   install:
+    - method: pip
+      path: selenuim
+    - requirements: requirements.txt
     - requirements: doc/requirements.txt
