MNT: Updated requirements

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 # Web scraping/interfacing
 # selenuim # This always fails on automated builds
 webdriver-manager
+beautifulsoup4
 
 # Data manipulation
 pandas
